[package]
name = "plant5"
version = "0.1.0"
authors = ["sky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
bevy = "0.4"
gamma = { git = "https://github.com/skairunner/gamma.git", branch = "removeable"}
log = "~0.4"
maplit = "~1.0"
serde = "~1.0"
serde_yaml = "~0.8"
simplelog = "~0.9"

[dev-dependencies]
ntest = "^0.7"